# sesame-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: client.rs  inner_client.rs  lib.rs  serialized.rs  sesame.rs  utility.rs
