[package]
name = "sesame_rs"
version = "0.1.0"
authors = ["MichaeGon <lo.dnix@gmail.com>"]
repository = "https://github.com/MichaeGon/sesame-rs"
keywords = ["sesame", "api-client"]
license-file = "LICENSE"
readme = "README.md"
description = "Sesame API Client in Rust"

[dependencies]
hyper = "0.11"
futures = "*"
tokio-core = "*"
hyper-tls = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
