[package]
name = "sesame_rs"
version = "0.1.1"
authors = ["MichaeGon <lo.dnix@gmail.com>"]
repository = "https://github.com/MichaeGon/sesame-rs"
keywords = ["sesame", "api-client"]
license-file = "LICENSE"
readme = "README.md"
description = "Sesame API Client in Rust"

[dependencies]
hyper = "0.11"
futures = "0.1.14"
tokio-core = "0.1.8"
hyper-tls = "0.1.2"
serde = "1.0.9"
serde_json = "1.0.2"
serde_derive = "1.0.9"
